setup project file part 1

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "nextlevel",
   "version": "1.0.0",
   "description": "Backend at next level",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "javascripts",
@@ -12,5 +13,8 @@
     "nextlevel"
   ],
   "author": "sijan gautam",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.21.2"
+  }
 }
